2012-01-01  Eli Zaretskii  <eliz@gnu.org>

	* term/w32-win.el (dynamic-library-alist) <gnutls>: Load
	libgnutls-28.dll, from GnuTLS version 3.x, in preference to
	libgnutls-26.dll.

2011-12-31  Andreas Schwab  <schwab@linux-m68k.org>

	* emacs-lisp/bytecomp.el (byte-compile-file): Fix indentation.

2011-12-31  Eli Zaretskii  <eliz@gnu.org>

	* mail/rmail.el (rmail-show-message-1): Decode any RFC2047 encoded
	headers of non-MIME messages, when rmail-enable-mime is non-nil.

2011-12-29  Michael Albinus  <michael.albinus@gmx.de>

	* net/tramp-sh.el (tramp-find-shell): Set "remote-shell" property
	also for alternative shells.
	(tramp-open-connection-setup-interactive-shell): Check, whether
	the shell is a busybox.
	(tramp-send-command): Don't suppress multiple prompts for
	busyboxes, it hurts.

2011-12-28  Chong Yidong  <cyd@gnu.org>

	* progmodes/gdb-mi.el (gdb-get-source-file-list)
	(gdb-get-source-file): Move mode line update to
	gdb-get-source-file (Bug#10087).

2011-12-25  Chong Yidong  <cyd@gnu.org>

	* progmodes/gud.el (gud-gdb-fetch-lines-filter): Just use
	gud-gdb-marker-filter without taking it as an argument.
	(gud-gdb-run-command-fetch-lines): Caller changed.
	(gud-gdb-completion-function): New variable.
	(gud-gdb-completion-at-point): Use it.
	(gud-gdb-completions-1): Split from gud-gdb-completions.

	* progmodes/gdb-mi.el (gdb-input): Accept command and handler
	function as separate arguments.
	(gdb-init-1, gdb-non-stop-handler, gdb-check-target-async)
	(gdb-tooltip-print-1, gud-watch, gdb-speedbar-update)
	(gdb-var-list-children, gdb-var-set-format, gdb-var-delete-1)
	(gdb-var-delete-children, gdb-edit-value, gdb-var-update)
	(gdb-stopped, def-gdb-auto-update-trigger)
	(gdb-place-breakpoints, gdb-select-thread, gdb-select-frame)
	(gdb-get-changed-registers, gdb-get-main-selected-frame): Callers
	changed.
	(gud-gdbmi-completions): New function.
	(gdb): Use it for generating the completion table.

2011-12-24  Alan Mackenzie  <acm@muc.de>
